# tau-rec

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: LICENSE  answers.json  catalog.json  policy.md  task_baseline.json
data/tasks/: task_001.json  task_002.json  task_003.json  task_004.json  task_005.json  task_006.json  task_007.json  task_008.json  task_009.json  task_010.json  task_011.json  task_012.json  task_013.json  task_014.json  task_015.json  task_016.json  task_017.json  task_018.json  task_019.json  task_020.json  task_021.json  task_022.json  task_023.json  task_024.json  task_025.json  task_026.json  task_027.json  task_028.json  task_029.json  task_030.json  task_031.json  task_032.json  task_033.json  task_034.json  task_035.json  task_036.json  task_037.json  task_038.json  task_039.json  task_040.json  (+20 more)
scripts/: make_latency_plot.py  regenerate_answers.py
src/tau_rec/: cli.py  cost.py  play.py
src/tau_rec/agents/: base.py  litellm_agent.py
src/tau_rec/catalog/: pipeline.py  search.py  validator.py
src/tau_rec/data_model/: catalog.py  conversation.py  task.py
src/tau_rec/environment/: tools.py
src/tau_rec/evaluator/: constraint.py  efficiency.py  evaluator.py  policy.py
src/tau_rec/metrics/: bootstrap.py  pass_k.py
src/tau_rec/orchestrator/: orchestrator.py
tests/: test_agents.py  test_catalog.py  test_cli.py  test_data_integrity.py  test_data_model.py  test_evaluator.py  test_import.py  test_integration.py  test_metrics.py  test_orchestrator.py  test_simulator.py  test_tools.py
(+1 files in other folders)
